# kandji

./: api.py  device_info.py  devices.py  pyproject.toml  test.py
test/: list-devices.json
