[tool.poetry]
name = "kandji"
version = "0.1.0"
description = "Kandji Helper"
authors = ["Alan Berman git@thealanberman.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
